examples/test/testpolicy15608.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15608
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key40: value27
      key41: value21
      key12: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value43
          key37: value10
          key11: value31
